[gd_scene load_steps=2 format=3 uid="uid://drn4ebgmfng0q"]

[ext_resource type="Script" uid="uid://db0a3ta1ysd80" path="res://game.gd" id="1_80nbo"]

[node name="Game" type="Node2D"]
script = ExtResource("1_80nbo")

[node name="CompletionLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 98.0
offset_top = 498.0
offset_right = 622.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "Пазл собран!"

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Button" type="Button" parent="."]
offset_left = 173.0
offset_top = 921.0
offset_right = 574.0
offset_bottom = 984.0
theme_override_font_sizes/font_size = 40
text = "Показать оригинал"

[node name="Button2" type="Button" parent="."]
offset_left = 293.0
offset_top = 994.0
offset_right = 452.0
offset_bottom = 1057.0
theme_override_font_sizes/font_size = 40
text = "В меню"

[node name="ContinueButton" type="Button" parent="."]
visible = false
offset_left = 233.0
offset_top = 921.0
offset_right = 497.0
offset_bottom = 984.0
theme_override_font_sizes/font_size = 40
text = "Продолжить"
